Change article tag

--- a/index.html
+++ b/index.html
@@ -36,42 +36,42 @@
                 </div>
                <div class="articles" id="pelajaran">
                     <h2>Lihat daftar pelajaran yang tersedia!</h2>
-                  <div class="article-icon">
+                  <article>
                       <img src="./assets/image/html.png">
                       <p>HTML</p>
-                  </div> 
-                  <div class="article-icon">
+                  </article> 
+                  <article>
                       <img src="./assets/image/css.png">
                       <p>CSS</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/javascript.png">
                       <p>JavaScript</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/react.png">
                       <p>React</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/laravel.png">
                       <p>Laravel</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/php.png">
                       <p>PHP</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/sql.png">
                       <p>SQL</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/nodeJs.png">
                       <p>NodeJs</p>
-                  </div>
-                  <div class="article-icon">
+                  </article>
+                  <article>
                       <img src="./assets/image/python.png">
                       <p>Python</p>
-                  </div>
+                  </article>
                </div>
                <div class="testimoni-section" id="testimoni">
                    <div class="testimoni-title">
